test/corpus/basic.txt
================
コメント
================
; これはコメントです
---

(source_file
  (comment))

================
ラベル
================
*scene_start
---

(source_file
  (label
    (label_name)))

================
単純なタグ
================
[l]
---

(source_file
  (tag_line
    (tag
      (tag_name))))

================
属性付きタグ
================
[bg storage="room.png" time=500]
---

(source_file
  (tag_line
    (tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (quoted_string
            (string_content))))
      (attribute
        (attribute_name)
        (attribute_value
          (unquoted_value))))))

================
テキスト行
================
春子「こんにちは」
---

(source_file
  (text_line))

================
@タグ（ショートハンド）
================
@showmenubutton
---

(source_file
  (at_tag
    (tag_name)))

================
属性付き@タグ
================
@bg storage="room.png" time=500
---

(source_file
  (at_tag
    (tag_name)
    (at_attribute
      (attribute_name)
      (at_attribute_value
        (quoted_string
          (string_content))))
    (at_attribute
      (attribute_name)
      (at_attribute_value
        (at_unquoted_value)))))

================
話者表示（名前あり）
================
#あかね
---

(source_file
  (speaker
    (speaker_name)))

================
話者表示（名前なし）
================
#
---

(source_file
  (speaker))

================
話者表示（?）
================
#?
---

(source_file
  (speaker
    (speaker_name)))

================
スクリプトブロック
================
[iscript]
var x = 1;
console.log(x);
[endscript]
---

(source_file
  (script_block
    (iscript_open)
    (script_content)
    (endscript_close)))

================
空のスクリプトブロック
================
[iscript]
[endscript]
---

(source_file
  (script_block
    (iscript_open)
    (endscript_close)))

================
スクリプトブロック前後に他の行
================
*start
[iscript]
f.test = true;
[endscript]
[l]
---

(source_file
  (label
    (label_name))
  (script_block
    (iscript_open)
    (script_content)
    (endscript_close))
  (tag_line
    (tag
      (tag_name))))

================
複数行の組み合わせ
================
*start
; シーン開始
[bg storage="bg01.png"]
これはテキストです。
[l]
---

(source_file
  (label
    (label_name))
  (comment)
  (tag_line
    (tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (quoted_string
            (string_content))))))
  (text_line)
  (tag_line
    (tag
      (tag_name))))
